Initial Setup Page for SystemAdmin is completed

--- a/Sample.Hosted/Pages/Account/Logout.cshtml
+++ b/Sample.Hosted/Pages/Account/Logout.cshtml
@@ -11,6 +11,7 @@
 <p class="text-center">Are you sure you want to log out?</p>
 
 <form method="post" class="text-center">
+    <div asp-validation-summary="All" class="text-danger"></div>
     <button type="submit" class="btn btn-primary">Log out</button>
     <a asp-page="/Index" class="btn btn-secondary">Cancel</a>
 </form>
