--- a/Sample.Hosted/Pages/Account/EditDetails.cshtml
+++ b/Sample.Hosted/Pages/Account/EditDetails.cshtml
@@ -11,6 +11,7 @@
 <div class="card">
     <div class="card-body">
         <form method="post" class="row">
+            <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group ">
                 <label asp-for="Input.PhoneNumber"></label>
                 <input asp-for="Input.PhoneNumber" class="form-control"/>
