--- a/Sample.Hosted/Pages/Account/Login.cshtml
+++ b/Sample.Hosted/Pages/Account/Login.cshtml
@@ -12,18 +12,19 @@
         <div class="card">
             <div class="card-body">
                 <form method="post">
+                    <div asp-validation-summary="All" class="text-danger"></div>
                     <div class="form-group mb-3">
                         <label asp-for="Input.Email"></label>
-                        <input asp-for="Input.Email" class="form-control" />
+                        <input asp-for="Input.Email" class="form-control"/>
                         <span asp-validation-for="Input.Email" class="text-danger"></span>
                     </div>
                     <div class="form-group mb-3">
                         <label asp-for="Input.Password"></label>
-                        <input asp-for="Input.Password" type="password" class="form-control" />
+                        <input asp-for="Input.Password" type="password" class="form-control"/>
                         <span asp-validation-for="Input.Password" class="text-danger"></span>
                     </div>
                     <div class="form-group mb-3 form-check">
-                        <input asp-for="Input.RememberMe" class="form-check-input" />
+                        <input asp-for="Input.RememberMe" class="form-check-input"/>
                         <label asp-for="Input.RememberMe" class="form-check-label"></label>
                     </div>
                     <button type="submit" class="btn btn-primary w-100">Log in</button>
