--- a/Sample.Hosted/Pages/Account/Register.cshtml
+++ b/Sample.Hosted/Pages/Account/Register.cshtml
@@ -12,19 +12,20 @@
         <div class="card">
             <div class="card-body">
                 <form method="post">
+                    <div asp-validation-summary="All" class="text-danger"></div>
                     <div class="form-group mb-3">
                         <label asp-for="Input.Email"></label>
-                        <input asp-for="Input.Email" class="form-control" />
+                        <input asp-for="Input.Email" class="form-control"/>
                         <span asp-validation-for="Input.Email" class="text-danger"></span>
                     </div>
                     <div class="form-group mb-3">
                         <label asp-for="Input.Password"></label>
-                        <input asp-for="Input.Password" type="password" class="form-control" />
+                        <input asp-for="Input.Password" type="password" class="form-control"/>
                         <span asp-validation-for="Input.Password" class="text-danger"></span>
                     </div>
                     <div class="form-group mb-3">
                         <label asp-for="Input.ConfirmPassword"></label>
-                        <input asp-for="Input.ConfirmPassword" type="password" class="form-control" />
+                        <input asp-for="Input.ConfirmPassword" type="password" class="form-control"/>
                         <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
                     </div>
                     <button type="submit" class="btn btn-primary w-100">Register</button>
