--- a/Sample.Hosted/Pages/Shared/_Navbar.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Navbar.cshtml
@@ -20,7 +20,7 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end bg-primary dropdown-menu-dark border-0" aria-labelledby="navbarDropdown">
                             <li>
-                                <a class="dropdown-item" href="/Account/Details">My Profile</a>
+                                <a class="dropdown-item" href="/Account/Profile">My Profile</a>
                             </li>
                             <li>
                                 <hr class="dropdown-divider">
