--- a/Sample.Hosted/Pages/Shared/_Sidebar.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Sidebar.cshtml
@@ -28,6 +28,6 @@ https://getbootstrap.com/docs/5.3/examples/sidebars/
 *@
 
 @*@await Html.PartialAsync("_SidebarFull")*@
-@await Html.PartialAsync("_SidebarCompact")
+@await Html.PartialAsync("_SidebarSlim")
 @*@await Html.PartialAsync("_SidebarCollapsible")*@
 @*@await Html.PartialAsync("_SidebarListGroup")*@
