--- a/Sample.Hosted/Pages/Shared/_SidebarFull.cshtml
+++ b/Sample.Hosted/Pages/Shared/_SidebarFull.cshtml
@@ -45,7 +45,7 @@
     <ul class="dropdown-menu text-small shadow">
       <li><a class="dropdown-item" href="#">New project...</a></li>
       <li><a class="dropdown-item" href="#">Settings</a></li>
-      <li><a class="dropdown-item" href="/Account/Details">Profile</a></li>
+      <li><a class="dropdown-item" href="/Account/Profile">Profile</a></li>
       <li><hr class="dropdown-divider"></li>
       <li><a class="dropdown-item" href="/Account/Logout">Log out</a></li>
     </ul>
