--- a/Sample.Hosted/Pages/Shared/_SidebarCollapsible.cshtml
+++ b/Sample.Hosted/Pages/Shared/_SidebarCollapsible.cshtml
@@ -50,7 +50,7 @@
       <div class="collapse" id="account-collapse">
         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
           <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">New...</a></li>
-          <li><a href="/Account/Details" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Profile</a></li>
+          <li><a href="/Account/Profile" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Profile</a></li>
           <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Settings</a></li>
           <li><a href="/Account/Logout" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Log out</a></li>
         </ul>
