--- a/Sample.Hosted/Pages/Account/ProfileEdit.cshtml
+++ b/Sample.Hosted/Pages/Account/ProfileEdit.cshtml
@@ -5,6 +5,7 @@
 }
 
 @*https://getbootstrap.com/docs/5.3/forms/layout/*@
+@*https://getbootstrap.com/docs/5.3/layout/columns/*@
 
 <h2>Edit User Profile</h2>
 
@@ -12,20 +13,29 @@
     <div class="card-body">
         <form method="post" class="row">
             <div asp-validation-summary="All" class="text-danger"></div>
-
-            <!-- Phone Number Field -->
             <div class="row mb-3">
-                <div class="form-group col-auto">
-                    <label asp-for="Input.PhoneNumber"></label>
-                    <input asp-for="Input.PhoneNumber" class="form-control"/>
-                    <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+                <div class="col-3">
+                    <div class="form-floating col-auto">
+                        <input asp-for="Input.PhoneNumber" class="form-control" type="tel" placeholder="05556667788"/>
+                        <label asp-for="Input.PhoneNumber"></label>
+                        <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row mb-3">
+                <div class="col-3">
+                    <div class="form-group form-check">
+                        <input asp-for="Input.SlimUI" class="form-check-input"/>
+                        <label asp-for="Input.SlimUI" class="form-check-label"></label>
+                    </div>
                 </div>
             </div>
 
             <!-- Save and Cancel Buttons -->
             <div class="col-auto mt-3">
                 <button type="submit" class="btn btn-primary">Save Changes</button>
-                <a href="/Account/Profile" class="btn btn-secondary">Cancel</a>
+                <a href="@PageFor.AccountProfile" class="btn btn-secondary">Cancel</a>
             </div>
         </form>
     </div>
