--- a/Sample.Hosted/Pages/Home.cshtml
+++ b/Sample.Hosted/Pages/Home.cshtml
@@ -1,5 +1,5 @@
-@page
-@model Sample.Hosted.Pages.Index
+@page "/{Home?}"
+@model Sample.Hosted.Pages.Home
 
 @{
     ViewData["Title"] = "Home Page";
