--- a/Sample.Hosted/Pages/Shared/_SidebarCollapsible.cshtml
+++ b/Sample.Hosted/Pages/Shared/_SidebarCollapsible.cshtml
@@ -1,5 +1,5 @@
 <div class="flex-shrink-0 p-3" style="width: 280px;">
-  <a href="/" class="d-flex align-items-center pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom">
+  <a href="@PageFor.Home" class="d-flex align-items-center pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom">
     <svg class="bi pe-none me-2" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
     <span class="fs-5 fw-semibold">Collapsible</span>
   </a>
@@ -50,9 +50,9 @@
       <div class="collapse" id="account-collapse">
         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
           <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">New...</a></li>
-          <li><a href="/Account/Profile" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Profile</a></li>
+          <li><a href="@PageFor.AccountProfile" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Profile</a></li>
           <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Settings</a></li>
-          <li><a href="/Account/Logout" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Log out</a></li>
+          <li><a href="@PageFor.AccountLogout" class="link-body-emphasis d-inline-flex text-decoration-none rounded">Log out</a></li>
         </ul>
       </div>
     </li>
