--- a/Sample.Hosted/Pages/Account/Login.cshtml
+++ b/Sample.Hosted/Pages/Account/Login.cshtml
@@ -13,24 +13,28 @@
             <div class="card-body">
                 <form method="post">
                     <div asp-validation-summary="All" class="text-danger"></div>
-                    <div class="form-group mb-3">
+
+                    <div class="form-floating mb-3">
+                        <input asp-for="Input.Email" class="form-control" type="email" placeholder="name@example.com"/>
                         <label asp-for="Input.Email"></label>
-                        <input asp-for="Input.Email" class="form-control"/>
                         <span asp-validation-for="Input.Email" class="text-danger"></span>
                     </div>
-                    <div class="form-group mb-3">
+
+                    <div class="form-floating mb-3">
+                        <input asp-for="Input.Password" type="password" class="form-control" placeholder="Password"/>
                         <label asp-for="Input.Password"></label>
-                        <input asp-for="Input.Password" type="password" class="form-control"/>
                         <span asp-validation-for="Input.Password" class="text-danger"></span>
                     </div>
+
                     <div class="form-group mb-3 form-check">
                         <input asp-for="Input.RememberMe" class="form-check-input"/>
                         <label asp-for="Input.RememberMe" class="form-check-label"></label>
                     </div>
                     <button type="submit" class="btn btn-primary w-100">Log in</button>
                 </form>
+
                 <p class="mt-3">
-                    <a asp-page="./Register">Register as a new user</a>
+                    <a asp-page="@PageFor.AccountRegister">Register as a new user</a>
                 </p>
             </div>
         </div>
@@ -38,5 +42,5 @@
 </div>
 
 @section Scripts {
-    <partial name="_ValidationScriptsPartial" />
+    <partial name="_ValidationScriptsPartial"/>
 }
