--- a/Sample.Hosted/Pages/Account/Logout.cshtml
+++ b/Sample.Hosted/Pages/Account/Logout.cshtml
@@ -13,5 +13,5 @@
 <form method="post" class="text-center">
     <div asp-validation-summary="All" class="text-danger"></div>
     <button type="submit" class="btn btn-primary">Log out</button>
-    <a asp-page="/Index" class="btn btn-secondary">Cancel</a>
+    <a asp-page="@PageFor.Home" class="btn btn-secondary">Cancel</a>
 </form>
