--- a/Sample.Hosted/Pages/Shared/_SidebarFull.cshtml
+++ b/Sample.Hosted/Pages/Shared/_SidebarFull.cshtml
@@ -1,4 +1,5 @@
-<div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary" style="width: 280px;">
+@using DRN.Framework.Utils.Scope
+<div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary" style="width: 200px;">
   <a href="@PageFor.Home" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
     <svg class="bi pe-none me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
     <span class="fs-4">Sidebar</span>
@@ -39,8 +40,8 @@
   <hr>
   <div class="dropdown">
     <a href="#" class="d-flex align-items-center link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-      <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
-      <strong>mdo</strong>
+      <profile-picture class="rounded-circle me-2" width="48" height="48"/>
+      <strong>DRN</strong>
     </a>
     <ul class="dropdown-menu text-small shadow">
       <li><a class="dropdown-item" href="#">New project...</a></li>
