--- a/Sample.Hosted/Pages/Shared/_SidebarSlim.cshtml
+++ b/Sample.Hosted/Pages/Shared/_SidebarSlim.cshtml
@@ -32,7 +32,7 @@
   </ul>
   <div class="dropdown border-top">
     <a href="#" class="d-flex align-items-center justify-content-center p-3 link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-      <profile-picture class="rounded-circle" width="48" height="48" style="border: 1px solid #ddd; border-radius: 2px; padding: 2px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);"/>
+      <profile-picture class="rounded-circle" width="48" height="48"/>
     </a>
     <ul class="dropdown-menu text-small shadow">
       <li><a class="dropdown-item" href="#">New project...</a></li>
