--- a/Sample.Hosted/Pages/Shared/_Sidebar.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Sidebar.cshtml
@@ -1,4 +1,3 @@
-@using DRN.Framework.Utils.Scope
 @using Sample.Domain.Identity
 <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
     <symbol id="bootstrap" viewBox="0 0 118 94">
@@ -29,7 +28,7 @@ https://getbootstrap.com/docs/5.3/examples/
 https://getbootstrap.com/docs/5.3/examples/sidebars/
 *@
 
-@if (ScopeContext.Value.IsClaimFlagEnabled(UserClaims.SlimUI))
+@if (ScopeContext.IsClaimFlagEnabled(UserClaims.SlimUI))
 {
     @await Html.PartialAsync("_SidebarSlim");
 }
