--- a/Sample.Hosted/Pages/_ViewImports.cshtml
+++ b/Sample.Hosted/Pages/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 @using DRN.Framework.Utils.Settings
+@using DRN.Framework.Utils.Scope
 @using Sample.Hosted.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Sample.Hosted
