ClaimContext added to sample hosted

--- a/Sample.Hosted/Pages/Account/Profile.cshtml
+++ b/Sample.Hosted/Pages/Account/Profile.cshtml
@@ -1,6 +1,5 @@
 @page
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@using Sample.Domain.Identity
 @model Sample.Hosted.Pages.Account.ProfileModel
 @{
     ViewData["Title"] = "User Details";
@@ -26,7 +25,7 @@
                 <dd class="col-sm-9">@Model.IdentityUser.PhoneNumber</dd>
 
                 <dt class="col-sm-3">Slim UI</dt>
-                <dd class="col-sm-9">@ScopeContext.IsClaimFlagEnabled(UserClaims.SlimUI)</dd>
+                <dd class="col-sm-9">@ClaimContext.SlimUi</dd>
                 <!-- Add more user details here if necessary -->
             </dl>
         </div>
