MFA authentication part 1

--- a/Sample.Hosted/Pages/Account/Profile.cshtml
+++ b/Sample.Hosted/Pages/Account/Profile.cshtml
@@ -1,5 +1,6 @@
 @page
 @using Microsoft.AspNetCore.Mvc.TagHelpers
+@using Sample.Hosted.Auth.Claims
 @model Sample.Hosted.Pages.Account.ProfileModel
 @{
     ViewData["Title"] = "User Details";
