--- a/Sample.Hosted/Pages/Shared/_Sidebar.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Sidebar.cshtml
@@ -1,3 +1,4 @@
+@using Sample.Hosted.Auth.Claims
 <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
     <symbol id="bootstrap" viewBox="0 0 118 94">
         <title>Bootstrap</title>
