--- a/Sample.Hosted/Pages/Account/Login.cshtml
+++ b/Sample.Hosted/Pages/Account/Login.cshtml
@@ -8,7 +8,7 @@
 
 <div class="row justify-content-center">
     <div class="col-md-6">
-        <h2 class="text-center">Log in</h2>
+        <h2 class="text-center">@ViewData["Title"]</h2>
         <div class="card">
             <div class="card-body">
                 <form method="post">
