--- a/Sample.Hosted/Pages/System/Setup.cshtml
+++ b/Sample.Hosted/Pages/System/Setup.cshtml
@@ -1,5 +1,5 @@
 @page
-@model Sample.Hosted.Pages.Account.SetupModel
+@model Sample.Hosted.Pages.System.SetupModel
 
 @{
     ViewData["Title"] = "Initial Setup";
