--- a/Sample.Hosted/Pages/User/LoginWith2Fa.cshtml
+++ b/Sample.Hosted/Pages/User/LoginWith2Fa.cshtml
@@ -1,5 +1,5 @@
 @page
-@model Sample.Hosted.Pages.Account.LoginWith2Fa
+@model Sample.Hosted.Pages.User.LoginWith2Fa
 
 @{
     ViewData["Title"] = "Two-Factor Authentication";
