--- a/Sample.Hosted/Pages/User/Manage/EnableAuthenticator.cshtml
+++ b/Sample.Hosted/Pages/User/Manage/EnableAuthenticator.cshtml
@@ -1,5 +1,5 @@
 @page
-@model Sample.Hosted.Pages.Account.Manage.EnableAuthenticator
+@model Sample.Hosted.Pages.User.Manage.EnableAuthenticator
 
 @{
     ViewData["Title"] = "Enable Authenticator";
