--- a/Sample.Hosted/Pages/User/ProfileEdit.cshtml
+++ b/Sample.Hosted/Pages/User/ProfileEdit.cshtml
@@ -1,5 +1,5 @@
 @page
-@model Sample.Hosted.Pages.Account.ProfileEditModel
+@model Sample.Hosted.Pages.User.ProfileEditModel
 @{
     ViewData["Title"] = "Edit User Details";
 }
@@ -34,7 +34,7 @@
 
             <div class="col-auto mt-3">
                 <button type="submit" class="btn btn-primary">Save Changes</button>
-                <a href="@PageFor.AccountProfile" class="btn btn-secondary">Cancel</a>
+                <a href="@PageFor.User.Profile" class="btn btn-secondary">Cancel</a>
             </div>
         </form>
     </div>
