--- a/Sample.Hosted/Pages/Shared/_Navbar.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Navbar.cshtml
@@ -1,18 +1,18 @@
 @using DRN.Framework.SharedKernel.Enums
 <nav class="navbar navbar-expand-lg container bg-primary" data-bs-theme="dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="@PageFor.Home">@AppSettings.Instance.ApplicationName</a>
+        <a class="navbar-brand" href="@PageFor.Root.Home">@AppSettings.Instance.ApplicationName</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" active-page="@PageFor.Home" href="@PageFor.Home">Home</a>
+                    <a class="nav-link" aria-current="page" active-page="@PageFor.Root.Home" href="@PageFor.Root.Home">Home</a>
                 </li>
                 <environment include="@AppEnvironment.Development.ToString()">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="@PageFor.Swagger" target="_blank">Swagger</a>
+                        <a class="nav-link" aria-current="page" href="@PageFor.Root.Swagger" target="_blank">Swagger</a>
                     </li>
                 </environment>
                 <!-- Add more links here if needed -->
@@ -26,13 +26,13 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end bg-primary dropdown-menu-dark border-0" aria-labelledby="navbarDropdown">
                             <li>
-                                <a class="dropdown-item" href="@PageFor.AccountProfile">My Profile</a>
+                                <a class="dropdown-item" href="@PageFor.User.Profile">My Profile</a>
                             </li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
                             <li>
-                                <a class="dropdown-item" href="@PageFor.AccountLogout">Log out</a>
+                                <a class="dropdown-item" href="@PageFor.User.Logout">Log out</a>
                             </li>
                         </ul>
                     </li>
@@ -40,10 +40,10 @@
                 else
                 {
                     <li class="nav-item">
-                        <a class="nav-link" href="@PageFor.AccountLogin">Login</a>
+                        <a class="nav-link" href="@PageFor.User.Login">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="@PageFor.AccountRegister">Register</a>
+                        <a class="nav-link" href="@PageFor.User.Register">Register</a>
                     </li>
                 }
             </ul>
