--- a/Sample.Hosted/Pages/Shared/_SidebarFull.cshtml
+++ b/Sample.Hosted/Pages/Shared/_SidebarFull.cshtml
@@ -1,13 +1,13 @@
 @using DRN.Framework.Utils.Scope
 <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary" style="width: 200px;">
-  <a href="@PageFor.Home" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+  <a href="@PageFor.Root.Home" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
     <svg class="bi pe-none me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
     <span class="fs-4">Sidebar</span>
   </a>
   <hr>
   <ul class="nav nav-pills flex-column mb-auto">
     <li class="nav-item">
-      <a href="@PageFor.Home" class="nav-link active" aria-current="page">
+      <a href="@PageFor.Root.Home" class="nav-link active" aria-current="page">
         <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#home"/></svg>
         Home
       </a>
@@ -46,9 +46,9 @@
     <ul class="dropdown-menu text-small shadow">
       <li><a class="dropdown-item" href="#">New project...</a></li>
       <li><a class="dropdown-item" href="#">Settings</a></li>
-      <li><a class="dropdown-item" href="@PageFor.AccountProfile">Profile</a></li>
+      <li><a class="dropdown-item" href="@PageFor.User.Profile">Profile</a></li>
       <li><hr class="dropdown-divider"></li>
-      <li><a class="dropdown-item" href="@PageFor.AccountLogout">Log out</a></li>
+      <li><a class="dropdown-item" href="@PageFor.User.Logout">Log out</a></li>
     </ul>
   </div>
 </div>
