--- a/Sample.Hosted/Pages/User/Login.cshtml
+++ b/Sample.Hosted/Pages/User/Login.cshtml
@@ -1,5 +1,5 @@
 @page
-@model Sample.Hosted.Pages.Account.LoginModel
+@model Sample.Hosted.Pages.User.LoginModel
 
 @{
     ViewData["Title"] = "Log in";
@@ -34,7 +34,7 @@
                 </form>
 
                 <p class="mt-3">
-                    <a asp-page="@PageFor.AccountRegister">Register as a new user</a>
+                    <a asp-page="@PageFor.User.Register">Register as a new user</a>
                 </p>
             </div>
         </div>
