--- a/Sample.Hosted/Pages/User/Register.cshtml
+++ b/Sample.Hosted/Pages/User/Register.cshtml
@@ -1,5 +1,5 @@
 @page
-@model Sample.Hosted.Pages.Account.RegisterModel
+@model Sample.Hosted.Pages.User.RegisterModel
 
 @{
     ViewData["Title"] = "Register";
@@ -31,7 +31,7 @@
                     <button type="submit" class="btn btn-primary w-100">Register</button>
                 </form>
                 <p class="mt-3">
-                    <a asp-page="@PageFor.AccountLogin">Already have an account? Log in</a>
+                    <a asp-page="@PageFor.User.Login">Already have an account? Log in</a>
                 </p>
             </div>
         </div>
