ClaimContext refactored into ClaimFor + namespace refactor 3

--- a/Sample.Hosted/Pages/Shared/_Sidebar.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Sidebar.cshtml
@@ -28,7 +28,7 @@ https://getbootstrap.com/docs/5.3/examples/
 https://getbootstrap.com/docs/5.3/examples/sidebars/
 *@
 
-@if (ClaimContext.SlimUi)
+@if (ClaimFor.Profile.SlimUi)
 {
     @await Html.PartialAsync("_SidebarSlim");
 }
