--- a/Sample.Hosted/Pages/User/Management/EnableAuthenticator.cshtml
+++ b/Sample.Hosted/Pages/User/Management/EnableAuthenticator.cshtml
@@ -1,5 +1,5 @@
 @page
-@model Sample.Hosted.Pages.User.Manage.EnableAuthenticator
+@model Sample.Hosted.Pages.User.Management.EnableAuthenticator
 
 @{
     ViewData["Title"] = "Enable Authenticator";
