--- a/Sample.Hosted/Pages/User/Profile.cshtml
+++ b/Sample.Hosted/Pages/User/Profile.cshtml
@@ -26,7 +26,7 @@
                 <dd class="col-sm-9">@Model.IdentityUser.PhoneNumber</dd>
 
                 <dt class="col-sm-3">Slim UI</dt>
-                <dd class="col-sm-9">@ClaimContext.SlimUi</dd>
+                <dd class="col-sm-9">@ClaimFor.Profile.SlimUi</dd>
                 <!-- Add more user details here if necessary -->
             </dl>
         </div>
