--- a/Sample.Hosted/Pages/User/Management/ShowRecoveryCodes.cshtml
+++ b/Sample.Hosted/Pages/User/Management/ShowRecoveryCodes.cshtml
@@ -1,5 +1,5 @@
 @page
-@model Sample.Hosted.Pages.Account.Manage.ShowRecoveryCodes
+@model Sample.Hosted.Pages.User.Management.ShowRecoveryCodes
 
 @{
     ViewData["Title"] = "Recovery Codes";
