namespace refactor + DrnProgramBase refactored + ConfigureAuthorizationOptions added

--- a/Sample.Hosted/Pages/User/Profile.cshtml
+++ b/Sample.Hosted/Pages/User/Profile.cshtml
@@ -1,6 +1,7 @@
 @page
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@using Sample.Hosted.Auth.Claims
+@using Sample.Hosted
+@using Sample.Hosted.Utils
 @model Sample.Hosted.Pages.User.ProfileModel
 @{
     ViewData["Title"] = "User Details";
