--- a/Sample.Hosted/Pages/Shared/_Layout.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="~/css/site.css?v=@DateTime.Now.Ticks"/>
     <link rel="stylesheet" href="~/css/sidebars.css?v=@DateTime.Now.Ticks"/>
+    <link rel="icon" type="image/x-icon" href="/images/100.jpeg">
 </head>
 <body class="d-flex flex-column min-vh-100 bg-secondary-subtle">
 
