--- a/Sample.Hosted/Pages/User/LoginWith2Fa.cshtml
+++ b/Sample.Hosted/Pages/User/LoginWith2Fa.cshtml
@@ -12,10 +12,11 @@
         <div class="card">
             <div class="card-body">
                 <form method="post">
+                    <div asp-validation-summary="All" class="text-danger"></div>
+
                     <div class="form-floating mb-3">
                         <input asp-for="Login2FaModel.TwoFactorCode" class="form-control" placeholder="TwoFactorCode" autocomplete="one-time-code"/>
                         <label asp-for="Login2FaModel.TwoFactorCode"></label>
-                        <span asp-validation-for="Login2FaModel.TwoFactorCode"></span>
                     </div>
 
                     <div class="form-group mb-3 form-check">
