MFARedirectionMiddleware part 4 +  AuthorizedOnlyTagHelper & AnonymousOnlyTagHelper + 2FA Remember Me refactor

--- a/Sample.Hosted/Pages/Shared/_Navbar.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Navbar.cshtml
@@ -12,7 +12,7 @@
                 </li>
                 <environment include="@AppEnvironment.Development.ToString()">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="@PageFor.Root.Swagger" target="_blank">Swagger</a>
+                        <a class="nav-link" authorized-only aria-current="page" href="@PageFor.Root.Swagger" target="_blank">Swagger</a>
                     </li>
                 </environment>
                 <!-- Add more links here if needed -->
