--- a/Sample.Hosted/Pages/User/LoginWith2Fa.cshtml
+++ b/Sample.Hosted/Pages/User/LoginWith2Fa.cshtml
@@ -13,15 +13,13 @@
             <div class="card-body">
                 <form method="post">
                     <div asp-validation-summary="All" class="text-danger"></div>
-
                     <div class="form-floating mb-3">
                         <input asp-for="Login2FaModel.TwoFactorCode" class="form-control" placeholder="TwoFactorCode" autocomplete="one-time-code"/>
                         <label asp-for="Login2FaModel.TwoFactorCode"></label>
                     </div>
-
                     <div class="form-group mb-3 form-check">
-                        <input asp-for="RememberMe" class="form-check-input"/>
-                        <label asp-for="RememberMe" class="form-check-label">Remember this machine</label>
+                        <input asp-for="Login2FaModel.RememberMe" class="form-check-input"/>
+                        <label asp-for="Login2FaModel.RememberMe" class="form-check-label"></label>
                     </div>
                     <button type="submit" class="btn btn-primary w-100">Verify</button>
                 </form>
