AuthenticationHelper multiple program support added + Nexus.Hosted Identity Controllers added + Refactor

--- a/Sample.Hosted/Pages/User/Management/ShowRecoveryCodes.cshtml
+++ b/Sample.Hosted/Pages/User/Management/ShowRecoveryCodes.cshtml
@@ -15,7 +15,7 @@
                 <p>Save these recovery codes in a safe place:</p>
 
                 <ul>
-                    @foreach (var recoveryCode in Model?.RecoveryCodes??[])
+                    @foreach (var recoveryCode in Model.RecoveryCodes)
                     {
                         <li>@recoveryCode</li>
                     }
