DrnProgramBase<TProgram> refactored. Static properties removed to improve application stability for integration tests

--- a/Sample.Hosted/Pages/Home.cshtml
+++ b/Sample.Hosted/Pages/Home.cshtml
@@ -7,7 +7,7 @@
 }
 
 <div class="row justify-content-center text-center">
-    <h1 class="display-4">Welcome to @AppSettings.Instance.ApplicationName!</h1>
+    <h1 class="display-4">Welcome to @ScopeContext.Settings.ApplicationName!</h1>
     <p>This is a simple home page example using Razor Pages.</p>
 </div>
 
