--- a/Sample.Hosted/Pages/Shared/_Navbar.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Navbar.cshtml
@@ -1,7 +1,7 @@
 @using DRN.Framework.SharedKernel.Enums
 <nav class="navbar navbar-expand-lg container bg-primary" data-bs-theme="dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="@PageFor.Root.Home">@AppSettings.Instance.ApplicationName</a>
+        <a class="navbar-brand" href="@PageFor.Root.Home">@ScopeContext.Settings.ApplicationName</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
