--- a/Sample.Hosted/Pages/Shared/_Layout.cshtml
+++ b/Sample.Hosted/Pages/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>@ViewData["Title"] - @AppSettings.Instance.ApplicationName</title>
+    <title>@ViewData["Title"] - @ScopeContext.Settings.ApplicationName</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" integrity="sha256-9kPW/n5nn53j4WMRYAxe9c1rCY96Oogo/MKSVdKzPmI=" crossorigin="anonymous" referrerpolicy="no-referrer">
@@ -44,7 +44,7 @@
 
 <footer class="border-top footer text-muted mt-auto bg-light">
     <div class="container">
-        &copy @DateTime.Now.Year - @AppSettings.Instance.ApplicationName
+        &copy @DateTime.Now.Year - @ScopeContext.Settings.ApplicationName
     </div>
 </footer>
 
